fix: hide page title on viewports under 680px to prevent overlap with portal controls around 661px

--- a/src/styles/_materialui.scss
+++ b/src/styles/_materialui.scss
@@ -114,7 +114,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 680px) {
   .header-page-title {
     display: none; /* Hide page title on small mobile screens to prevent any overlaps with logo or controls */
   }
